syntax = "proto3";

package proto.stored.v1;

import "google/protobuf/empty.proto";
import "proto/common/v1/common.proto";

option go_package = "master-otel/internal/proto/stored/v1;stored";

service StoredService {
    rpc CreateUser(common.v1.User) returns (common.v1.User) {}
    rpc GetUser(common.v1.Identity) returns (common.v1.User) {}
    rpc DeleteUser(common.v1.Identity) returns (google.protobuf.Empty) {}
}
